BSO及其文档更新

--- a/article.bib
+++ b/article.bib
@@ -16,3 +16,9 @@
   journal={arXiv},
   year={2017},
 }
+@article{Wang2018BSO,
+  title={Beetle Swarm Optimization Algorithm:Theory and Application},
+  author={Wang Tiantian, Yang Long, Liu Qiang},
+  journal={arXiv},
+  year={2018},
+}
