--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -171,7 +171,7 @@
 
 \title{rBAS使用文档}
 \author{王江宇}
-\date{2018-09-01}
+\date{2018-09-04}
 
 \usepackage{amsthm}
 \newtheorem{theorem}{Theorem}[chapter]
@@ -2593,6 +2593,638 @@ r_1,r_2,r_3,r_4\in[0,5]\quad r_p,x_0,y_0\in[-5,5] \quad \theta_0,\theta_2^1,\cdo
 \bottomrule
 \end{tabular}
 \end{table}
+
+\chapter{Matlab用户}\label{matlabr}
+
+之前一直有同学在群里面反映，有没有matlab用户可以使用rBAS的方法。尽管我曾经也是matlab的忠实用户，但现在能力退化严重，实在是写不动代码。加之，我认为学习R的成本很低，而且更加便捷。因此，也就熄了再去做一个matlab
+toolbox的心思。
+
+不过，我还是决定尝试下是否存在两者的接口，可以完成参数的传递，让使用matlab的同学也可以使用rBAS。于是有了下面几点思路。
+
+\begin{itemize}
+\tightlist
+\item
+  使用matlab，通过R(D)COM服务器来与R通讯，其配置对于R用户而言尚且显得麻烦，何况matlab用户。不过在看mathwork的网站时，倒是得知他们把R
+  interface作为了未来的开发计划之一。所以，日后可以采用在matlab中调用R的形式。目前尚无此功能。
+\item
+  使用R中的R.matlab包，来与matlab通讯。这个办法咋一看很简单，尝试也成功了。最大的问题是\textbf{慢}，其次看源码应该是要配置\textbf{Java}(我电脑上原本有，执行无碍，但没有删除Java后尝试)。这种慢，可以称为很慢，后面我们能见识到。
+\item
+  使用\textbf{第三方语言}，如C/C++。别害怕，因为matlab提供了很强大的工具，即\texttt{Matlab\ Coder}来把你的matlab代码转为C或者C++。
+\end{itemize}
+
+下面我们讲第二点和第三点是如何操作的。
+
+\section{使用R.matlab包}\label{r.matlab}
+
+这一节更类似于娱乐和探索。因为该方法用于优化求解的速度，真的让人难以接受（也有可能是我没有找对方法）。如果无意于此，可以跳过。
+
+首先，可以按照下面的代码从CRAN安装该包。
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{install.packages}\NormalTok{(}\StringTok{'R.matlab'}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+当然，也可以利用\texttt{devtools}从github上按照该包。
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{devtools}\OperatorTok{::}\KeywordTok{install_github}\NormalTok{(}\StringTok{'HenrikBengtsson/R.matlab'}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+接下来，按照\href{https://cran.r-project.org/web/packages/R.matlab/R.matlab.pdf}{包的文档}进行操作。
+
+首先，加载包。
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{library}\NormalTok{(}\StringTok{'R.matlab'}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+在R中打开\texttt{matlab\ server}。
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{Matlab}\OperatorTok{$}\KeywordTok{startServer}\NormalTok{()}
+\end{Highlighting}
+\end{Shaded}
+
+效果就是可以看到matlab窗口以最小化的形式出现，不过里面没有视图，大家可以不必理会。后续操作均在R中完成。
+
+其次创建matlab对象，用于与Matlab通讯。
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{matlab <-}\StringTok{ }\KeywordTok{Matlab}\NormalTok{()}
+\end{Highlighting}
+\end{Shaded}
+
+然后，把要优化的函数（\textbf{使用matlab定义}），写入R。
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{setFunction}\NormalTok{(matlab, }\StringTok{" \textbackslash{}}
+\StringTok{  function z=test(x) \textbackslash{}}
+\StringTok{            %test function \textbackslash{}}
+\StringTok{            z = 100 *(x(2) - x(1).^2).^2+(x(1)-1).^2;\textbackslash{}}
+\StringTok{            "}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+这段代码，在matlab的本地服务器创建了一个M函数，如下所示。注意用\texttt{\textbackslash{}}号的使用。
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{function z =test(x,y)}
+  \CommentTok{%test function}
+\NormalTok{  z=}\FloatTok{100}\NormalTok{*(y-x.^}\FloatTok{2}\NormalTok{).^}\FloatTok{2}\NormalTok{+(x-}\FloatTok{1}\NormalTok{).^}\FloatTok{2}\NormalTok{;}
+\end{Highlighting}
+\end{Shaded}
+
+接下来我们创建目标函数。
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{func_MR <-}\StringTok{ }\ControlFlowTok{function}\NormalTok{(x)\{}
+  \KeywordTok{setVariable}\NormalTok{(matlab,}\DataTypeTok{x =}\NormalTok{ x) }\CommentTok{# 把R里面的x，赋值到matlab里面的x变量}
+  \KeywordTok{evaluate}\NormalTok{(matlab,}\StringTok{'z = test(x)'}\NormalTok{) }\CommentTok{# 在matlab里面执行 z = test(x) 命令}
+\NormalTok{  res <-}\StringTok{ }\KeywordTok{getVariable}\NormalTok{(matlab,}\KeywordTok{c}\NormalTok{(}\StringTok{'z'}\NormalTok{)) }\CommentTok{# 从matlab里面读取 z 变量}
+  \KeywordTok{return}\NormalTok{(res}\OperatorTok{$}\NormalTok{z) }\CommentTok{#返回z值}
+\NormalTok{\}}
+\end{Highlighting}
+\end{Shaded}
+
+这段代码块思路是，既然利用的是rBAS包，那么每次更新，都利用上一回合R计算的值，传递到matlab里面。然后，在matlab里面执行用户定义的函数。最后再用R把matlab里面算出来的变量值读取出来。
+
+这就是我们新的优化函数，虽然绕一点，但是是容易想到和理解的办法。接下来就是使用rBAS包来优化这个目标函数了。
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{system.time}\NormalTok{(\{}
+\NormalTok{  fit<-}
+\StringTok{    }\KeywordTok{BSOoptim}\NormalTok{(}\DataTypeTok{fn =}\NormalTok{ func_MR,}
+             \DataTypeTok{init =} \OtherTok{NULL}\NormalTok{,}
+             \DataTypeTok{s =} \DecValTok{2}\NormalTok{,}
+             \DataTypeTok{lower =} \KeywordTok{c}\NormalTok{(}\OperatorTok{-}\DecValTok{50}\NormalTok{,}\OperatorTok{-}\DecValTok{50}\NormalTok{),}
+             \DataTypeTok{upper =} \KeywordTok{c}\NormalTok{(}\DecValTok{50}\NormalTok{,}\DecValTok{50}\NormalTok{),}
+             \DataTypeTok{n =} \DecValTok{1}\NormalTok{,}
+             \DataTypeTok{w =} \KeywordTok{c}\NormalTok{(}\FloatTok{0.9}\NormalTok{,}\FloatTok{0.4}\NormalTok{),}
+             \DataTypeTok{w_vs =} \FloatTok{0.4}\NormalTok{, }
+             \DataTypeTok{step =} \DecValTok{10}\NormalTok{,}
+             \DataTypeTok{step_w =} \KeywordTok{c}\NormalTok{(}\FloatTok{0.9}\NormalTok{,}\FloatTok{0.4}\NormalTok{),}
+             \DataTypeTok{c =} \DecValTok{8}\NormalTok{,}
+             \DataTypeTok{v =} \KeywordTok{c}\NormalTok{(}\OperatorTok{-}\FloatTok{5.12}\NormalTok{,}\FloatTok{5.12}\NormalTok{),}
+             \DataTypeTok{trace =}\NormalTok{ T,}\DataTypeTok{seed =} \DecValTok{1}\NormalTok{)}
+\NormalTok{\}) }
+\end{Highlighting}
+\end{Shaded}
+
+我们使用了一段\texttt{BSO}算法的优化代码，但是，粒子数目设置为2，回合数只设置为1。结果，这么简单的计算，要花费\textbf{13s}。两个软件来回通讯占用了大量的时间，我相信，应该不会有用户愿意等待这么长久的时间。这个完整的优化过程，之后会有纯R代码，求解过程不到0.1s的时间。
+
+最后呢，需要使用下面的代码关闭matlab服务器。
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{close}\NormalTok{(matlab)}
+\end{Highlighting}
+\end{Shaded}
+
+R代码使用\texttt{BSO}解这个优化问题是这样的效果。
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{library}\NormalTok{(rBAS)}
+
+\NormalTok{test <-}\StringTok{ }\ControlFlowTok{function}\NormalTok{(x)\{}
+\NormalTok{  z <-}\StringTok{ }\DecValTok{100}\OperatorTok{*}\NormalTok{(x[}\DecValTok{2}\NormalTok{]}\OperatorTok{-}\NormalTok{x[}\DecValTok{1}\NormalTok{]}\OperatorTok{^}\DecValTok{2}\NormalTok{)}\OperatorTok{^}\DecValTok{2} \OperatorTok{+}\StringTok{ }\NormalTok{(x[}\DecValTok{1}\NormalTok{] }\OperatorTok{-}\StringTok{ }\DecValTok{1}\NormalTok{)}\OperatorTok{^}\DecValTok{2}
+\NormalTok{\}}
+
+\KeywordTok{system.time}\NormalTok{(\{}
+\NormalTok{  fit<-}
+\StringTok{    }\KeywordTok{BSOoptim}\NormalTok{(}\DataTypeTok{fn =}\NormalTok{ test,}
+             \DataTypeTok{init =} \OtherTok{NULL}\NormalTok{,}
+             \DataTypeTok{lower =} \KeywordTok{c}\NormalTok{(}\OperatorTok{-}\DecValTok{50}\NormalTok{,}\OperatorTok{-}\DecValTok{50}\NormalTok{),}
+             \DataTypeTok{upper =} \KeywordTok{c}\NormalTok{(}\DecValTok{50}\NormalTok{,}\DecValTok{50}\NormalTok{),}
+             \DataTypeTok{n =} \DecValTok{300}\NormalTok{,}
+             \DataTypeTok{w =} \KeywordTok{c}\NormalTok{(}\FloatTok{0.9}\NormalTok{,}\FloatTok{0.4}\NormalTok{),}
+             \DataTypeTok{w_vs =} \FloatTok{0.4}\NormalTok{, }
+             \DataTypeTok{step =} \DecValTok{10}\NormalTok{,}
+             \DataTypeTok{step_w =} \KeywordTok{c}\NormalTok{(}\FloatTok{0.9}\NormalTok{,}\FloatTok{0.4}\NormalTok{),}
+             \DataTypeTok{c =} \DecValTok{8}\NormalTok{,}
+             \DataTypeTok{v =} \KeywordTok{c}\NormalTok{(}\OperatorTok{-}\FloatTok{5.12}\NormalTok{,}\FloatTok{5.12}\NormalTok{),}
+             \DataTypeTok{trace =}\NormalTok{ F,}\DataTypeTok{seed =} \DecValTok{1}\NormalTok{)}
+\NormalTok{\})}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+##    user  system elapsed 
+##    0.08    0.00    0.08
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{fit}\OperatorTok{$}\NormalTok{par}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## [1] 1 1
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{fit}\OperatorTok{$}\NormalTok{value}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## [1] 0
+\end{verbatim}
+
+时间短，而且能求出理论的最小值。这也反映了第二个方法过于低效的问题，我们看看借助第三方语言能否行得通。
+
+\section{中转站：C/C++}\label{cc}
+
+matlab的\texttt{matlab\ Coder}可以让用户把自己的代码变成C或者C++，前提是，需要有编译器。不过，如果你使用过R，那么一般都会安装\href{https://cran.r-project.org/bin/windows/Rtools/}{Rtools}，这就意味着你安装了MinGw。下面的过程需要用到Rtools，还请大家自行下载安装。
+
+打开matlab，输入下面的指令：
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{mex -steup}
+\end{Highlighting}
+\end{Shaded}
+
+如果电脑中只安装过Rtools，而没有VS之类的编译器，一般会显示图\ref{fig:mex}的界面。
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.95\linewidth]{img/mex} 
+
+}
+
+\caption{mex -setup}\label{fig:mex}
+\end{figure}
+
+第一句报错，是因为我并没有把Rtools中的mingw\_64文件夹加入环境变量。因此，在执行第二句之后，再执行\texttt{mex\ -setup}就不会报错。
+
+好了，加入你成功了，那么抛开前面所有的知识不看。现在说Coder工具箱。
+
+假设你的路径下有2个M文件，一个是我们之前所说的测试函数\texttt{test.m}，还有一个是我们所说的，用来测试\texttt{test}函数的文件\texttt{test\_main.m}文件。它们的代码如下。
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{% -------------test.m----------------%}
+
+\NormalTok{function z = test(x)}
+\NormalTok{z = }\FloatTok{100}\NormalTok{ *(x(}\FloatTok{2}\NormalTok{) - x(}\FloatTok{1}\NormalTok{).^}\FloatTok{2}\NormalTok{).^}\FloatTok{2}\NormalTok{+(x(}\FloatTok{1}\NormalTok{)-}\FloatTok{1}\NormalTok{).^}\FloatTok{2}\NormalTok{;}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{% -------------test_main.m----------------%}
+
+\NormalTok{z = test([}\FloatTok{1} \FloatTok{1}\NormalTok{]);}
+\end{Highlighting}
+\end{Shaded}
+
+接下来我们点击Matlab菜单栏上的APP，在里面找到Matlab
+Coder工具箱打开，如图\ref{fig:coder1}。
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.95\linewidth]{img/coder1} 
+
+}
+
+\caption{Matlab Coder}\label{fig:coder1}
+\end{figure}
+
+点击Enter a function name右边的
+\(\cdots\)符号，然后选中\texttt{test.m}文件，可以看到图\ref{fig:coder2}的效果。
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.95\linewidth]{img/coder2} 
+
+}
+
+\caption{Matlab Coder}\label{fig:coder2}
+\end{figure}
+
+点击右下角\texttt{Next}按钮，可以看到如图\ref{fig:coder3}的界面。
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.95\linewidth]{img/coder3} 
+
+}
+
+\caption{Matlab Coder}\label{fig:coder3}
+\end{figure}
+
+点击图\ref{fig:coder3}红色箭头所指处，并选中\texttt{test\_main.m}文件，点击\texttt{Autodefine\ Input\ types}，可以看到如图\ref{fig:coder4}的界面，接下来就是一路的\texttt{Next}。
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.95\linewidth]{img/coder4} 
+
+}
+
+\caption{Matlab Coder}\label{fig:coder4}
+\end{figure}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.95\linewidth]{img/coder5} 
+
+}
+
+\caption{Matlab Coder}\label{fig:coder5}
+\end{figure}
+
+直到图\ref{fig:coder6}，点击\texttt{Generate}按钮，生成C代码。
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.95\linewidth]{img/coder6} 
+
+}
+
+\caption{Matlab Coder}\label{fig:coder6}
+\end{figure}
+
+而后工具箱会给出\texttt{test.c}代码的预览，如图\ref{fig:coder7}。
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.95\linewidth]{img/coder7} 
+
+}
+
+\caption{Matlab Coder}\label{fig:coder7}
+\end{figure}
+
+我相信，大家还是能看懂这段代码。对于简单的优化问题，我们照猫画虎，就可以写出对应的C或者C++的代码。如果不想写，还可以按照上述的方法生成。
+
+那现在问题来了，如果我们有了C代码，如何在R语言中用了。
+
+由于matlab生成的代码很多库都是matlab依赖的（我这么认为，不一定正确），所以我们需要简单地调整一下，把代码变得简洁。
+
+原始的代码是这样的。
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{/* Include Files */}
+\PreprocessorTok{#include }\ImportTok{"rt_nonfinite.h"}
+\PreprocessorTok{#include }\ImportTok{"test.h"}
+
+\CommentTok{/* Function Definitions */}
+
+\CommentTok{/*}
+\CommentTok{ * Arguments    : const double x[2]}
+\CommentTok{ * Return Type  : double}
+\CommentTok{ */}
+\DataTypeTok{double}\NormalTok{ test(}\DataTypeTok{const} \DataTypeTok{double}\NormalTok{ x[}\DecValTok{2}\NormalTok{])}
+\NormalTok{\{}
+  \DataTypeTok{double}\NormalTok{ a;}
+\NormalTok{  a = x[}\DecValTok{1}\NormalTok{] - x[}\DecValTok{0}\NormalTok{] * x[}\DecValTok{0}\NormalTok{];}
+  \ControlFlowTok{return} \FloatTok{100.0}\NormalTok{ * (a * a) + (x[}\DecValTok{0}\NormalTok{] - }\FloatTok{1.0}\NormalTok{) * (x[}\DecValTok{0}\NormalTok{] - }\FloatTok{1.0}\NormalTok{);}
+\NormalTok{\}}
+
+\CommentTok{/*}
+\CommentTok{ * File trailer for test.c}
+\CommentTok{ *}
+\CommentTok{ * [EOF]}
+\CommentTok{ */}
+\end{Highlighting}
+\end{Shaded}
+
+我们进行\textbf{微调}（大家肯定是能理解并模仿的），变成R可以正确编译的。注意，由于Rcpp能让R和C++无缝贴合的强大功能，我把代码调整为了C++。后面的\texttt{Michalewicz\ function}，\texttt{Pressure\ Vessel\ function}均是用C++所写。
+
+\begin{verbatim}
+#include <Rcpp.h>
+using namespace Rcpp;
+// [[Rcpp::export]]
+double test(NumericVector x) {
+  double a;
+  a = x[1] - x[0] * x[0];
+  return 100.0 * (a*a) + (x[0] - 1.0) * (x[0] - 1.0);
+}
+\end{verbatim}
+
+把这段代码保存成\texttt{Rcpptest.cpp}文件，然后在R里面执行代码：
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{library}\NormalTok{(Rcpp) }\CommentTok{#加载Rcpp包}
+\KeywordTok{sourceCpp}\NormalTok{(}\StringTok{'你的Rcpptest.cpp文件路径'}\NormalTok{) }\CommentTok{#编译之前保存的cpp文件}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{#执行BSO优化算法函数}
+\KeywordTok{system.time}\NormalTok{(\{}
+\NormalTok{  fit<-}\KeywordTok{BSOoptim}\NormalTok{(}\DataTypeTok{fn =}\NormalTok{ test, }\CommentTok{#调用了编译的C++中的test函数}
+                \DataTypeTok{init =} \OtherTok{NULL}\NormalTok{,}
+                \DataTypeTok{lower =} \KeywordTok{c}\NormalTok{(}\OperatorTok{-}\DecValTok{50}\NormalTok{,}\OperatorTok{-}\DecValTok{50}\NormalTok{),}
+                \DataTypeTok{upper =} \KeywordTok{c}\NormalTok{(}\DecValTok{50}\NormalTok{,}\DecValTok{50}\NormalTok{),}
+                \DataTypeTok{n =} \DecValTok{300}\NormalTok{,}
+                \DataTypeTok{w =} \KeywordTok{c}\NormalTok{(}\FloatTok{0.9}\NormalTok{,}\FloatTok{0.4}\NormalTok{),}
+                \DataTypeTok{w_vs =} \FloatTok{0.4}\NormalTok{, }
+                \DataTypeTok{step =} \DecValTok{10}\NormalTok{,}
+                \DataTypeTok{step_w =} \KeywordTok{c}\NormalTok{(}\FloatTok{0.9}\NormalTok{,}\FloatTok{0.4}\NormalTok{),}
+                \DataTypeTok{c =} \DecValTok{8}\NormalTok{,}
+                \DataTypeTok{v =} \KeywordTok{c}\NormalTok{(}\OperatorTok{-}\FloatTok{5.12}\NormalTok{,}\FloatTok{5.12}\NormalTok{),}
+                \DataTypeTok{trace =}\NormalTok{ F,}\DataTypeTok{seed =} \DecValTok{1}\NormalTok{)}
+\NormalTok{\})}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+##    user  system elapsed 
+##    0.09    0.00    0.09
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{#查看优化参数}
+\NormalTok{fit}\OperatorTok{$}\NormalTok{par}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## [1] 1 1
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{#查看优化结果}
+\NormalTok{fit}\OperatorTok{$}\NormalTok{value}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## [1] 0
+\end{verbatim}
+
+执行速度很快，大家可能会有疑问，为啥看起来比纯R代码执行的时间还要长一点。这是因为你多次执行，耗时和电脑所处的状态有关系，这点误差是正常的。但是，如果是计算量较大的代码，利\textbf{用Rcpp会比R要节省大量的时间}。
+
+接下来我们看看另外两个例子，也就是\texttt{Michalewicz\ function}和\texttt{Pressure\ Vessel\ function}函数的优化问题。
+
+\texttt{Michalewicz\ function}
+也可以先用matlab生成C或者C++代码，然后稍作改编，保存为\texttt{Rcppmich.cpp}文件，代码如下：
+
+\begin{verbatim}
+#include <Rcpp.h>
+using namespace Rcpp;
+
+// [[Rcpp::export]]
+double michcpp(NumericVector x) {
+  double x0;
+  double x1;
+  x0 = -sin(x[0])*pow(sin((pow(x[0],2))/M_PI),20);
+  x1 = -sin(x[1])*pow(sin((2*pow(x[1],2))/M_PI),20);
+  return x0+x1;
+}
+\end{verbatim}
+
+和matlab或者R代码比起来，也是十分易懂的。
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{library}\NormalTok{(Rcpp) }\CommentTok{#加载Rcpp包}
+\KeywordTok{sourceCpp}\NormalTok{(}\StringTok{'你的Rcppmich.cpp文件路径'}\NormalTok{) }\CommentTok{#编译之前保存的cpp文件}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{#执行BAS优化算法函数}
+\KeywordTok{system.time}\NormalTok{(\{}
+\NormalTok{  fit<-}\KeywordTok{BASoptim}\NormalTok{(}\DataTypeTok{fn =}\NormalTok{ michcpp, }\CommentTok{#利用了C++中的michcpp函数}
+                \DataTypeTok{lower =} \KeywordTok{c}\NormalTok{(}\OperatorTok{-}\DecValTok{6}\NormalTok{,}\DecValTok{0}\NormalTok{), }\DataTypeTok{upper =} \KeywordTok{c}\NormalTok{(}\OperatorTok{-}\DecValTok{1}\NormalTok{,}\DecValTok{2}\NormalTok{),}
+                \DataTypeTok{seed =} \DecValTok{1}\NormalTok{, }\DataTypeTok{n =} \DecValTok{100}\NormalTok{,}\DataTypeTok{trace =} \OtherTok{FALSE}\NormalTok{)}
+\NormalTok{\})}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+##    user  system elapsed 
+##       0       0       0
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{#查看优化参数}
+\NormalTok{fit}\OperatorTok{$}\NormalTok{par}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## [1] -4.964687  1.575415
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{#查看优化结果}
+\NormalTok{fit}\OperatorTok{$}\NormalTok{value}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## [1] -1.966817
+\end{verbatim}
+
+对于\texttt{Pressure\ Vessel\ function}，保存为\texttt{RcppPV.cpp}文件，代码如下：
+
+\begin{verbatim}
+#include <Rcpp.h>
+using namespace Rcpp;
+
+// [[Rcpp::export]]
+double PVobj(NumericVector x) {
+  double x0 = floor(x[0])*0.0625;
+  double x1 = floor(x[1])*0.0625;
+  double x2 = x[2];
+  double x3 = x[3];
+  
+  double result = 0.6224*x0*x2*x3 + 1.7781*x1*pow(x2,2) 
+    +3.1611*pow(x0,2)*x3 + 19.84*pow(x0,2)*x2;
+  return result;
+}
+
+// [[Rcpp::export]]
+NumericVector PVcon(NumericVector x) {
+  double x0 = floor(x[0])*0.0625;
+  double x1 = floor(x[1])*0.0625;
+  double x2 = x[2];
+  double x3 = x[3];
+  
+  NumericVector constraint(3);
+  constraint[0] = 0.0193*x2 - x0;
+  constraint[1] = 0.00954*x2 - x1;
+  constraint[2] = 750.0*1728.0 - 3.141593*pow(x2,2)*x3 
+    - (4.0/3.0)*3.141593*pow(x2,3);
+  return constraint;
+}
+\end{verbatim}
+
+其中，\texttt{PVobj}是目标函数，\texttt{PVcon}是约束函数。
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{library}\NormalTok{(Rcpp) }\CommentTok{#加载Rcpp包}
+\KeywordTok{sourceCpp}\NormalTok{(}\StringTok{'你的RcppPV.cpp文件路径'}\NormalTok{) }\CommentTok{#编译之前保存的cpp文件}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{#执行BSO优化算法函数}
+\KeywordTok{system.time}\NormalTok{(\{}
+\NormalTok{  fit<-}\KeywordTok{BSOoptim}\NormalTok{(}\DataTypeTok{fn =}\NormalTok{ PVobj, }\CommentTok{#C++中的PVobj函数}
+         \DataTypeTok{init =} \OtherTok{NULL}\NormalTok{,}
+         \DataTypeTok{constr =}\NormalTok{ PVcon, }\CommentTok{#C++中的PVcon函数}
+         \DataTypeTok{lower =} \KeywordTok{c}\NormalTok{( }\DecValTok{1}\NormalTok{, }\DecValTok{1}\NormalTok{, }\DecValTok{10}\NormalTok{, }\DecValTok{10}\NormalTok{),}
+         \DataTypeTok{upper =} \KeywordTok{c}\NormalTok{(}\DecValTok{100}\NormalTok{, }\DecValTok{100}\NormalTok{, }\DecValTok{200}\NormalTok{, }\DecValTok{200}\NormalTok{),}
+         \DataTypeTok{n =} \DecValTok{1000}\NormalTok{,}
+         \DataTypeTok{w =} \KeywordTok{c}\NormalTok{(}\FloatTok{0.9}\NormalTok{,}\FloatTok{0.4}\NormalTok{),}
+         \DataTypeTok{w_vs =} \FloatTok{0.9}\NormalTok{,}
+         \DataTypeTok{step =} \DecValTok{100}\NormalTok{,}
+         \DataTypeTok{step_w =} \KeywordTok{c}\NormalTok{(}\FloatTok{0.9}\NormalTok{,}\FloatTok{0.4}\NormalTok{),}
+         \DataTypeTok{c =} \DecValTok{35}\NormalTok{,}
+         \DataTypeTok{v =} \KeywordTok{c}\NormalTok{(}\OperatorTok{-}\FloatTok{5.12}\NormalTok{,}\FloatTok{5.12}\NormalTok{),}
+         \DataTypeTok{trace =}\NormalTok{ F,}\DataTypeTok{seed =} \DecValTok{1}\NormalTok{,}
+         \DataTypeTok{pen =} \FloatTok{1e6}\NormalTok{)}
+\NormalTok{\})}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+##    user  system elapsed 
+##    1.55    0.00    1.55
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{#查看优化参数}
+\NormalTok{fit}\OperatorTok{$}\NormalTok{par}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## [1]  13.948846   7.541387  42.098446 176.636570
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{#查看优化结果}
+\NormalTok{fit}\OperatorTok{$}\NormalTok{value}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## [1] 6059.131
+\end{verbatim}
+
+结果很好，耗时也可以接受。不过，在写\texttt{BSOoptim}函数的时候，我使用了2层的循环来嵌套，因此，\texttt{BSOoptim}函数比rBAS包中其他的函数要慢上一些。后续我打算使用Rcpp把\texttt{BSOoptim}重写一遍，这样对大型的优化问题耗时会更容易接受。
+
+下面是\texttt{BSASoptim}对该问题的优化结果，同样也是采用C++编译的方式。
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{system.time}\NormalTok{(\{}
+\NormalTok{  result <-}\StringTok{ }\KeywordTok{BSASoptim}\NormalTok{(}\DataTypeTok{fn =}\NormalTok{ PVobj,}
+                      \DataTypeTok{k =} \DecValTok{5}\NormalTok{,}
+                      \DataTypeTok{lower =}\KeywordTok{c}\NormalTok{( }\DecValTok{1}\NormalTok{, }\DecValTok{1}\NormalTok{, }\DecValTok{10}\NormalTok{, }\DecValTok{10}\NormalTok{),}
+                      \DataTypeTok{upper =} \KeywordTok{c}\NormalTok{(}\DecValTok{100}\NormalTok{, }\DecValTok{100}\NormalTok{, }\DecValTok{200}\NormalTok{, }\DecValTok{200}\NormalTok{),}
+                      \DataTypeTok{constr =}\NormalTok{ PVcon,}
+                      \DataTypeTok{n =} \DecValTok{1000}\NormalTok{,}
+                      \DataTypeTok{step =} \DecValTok{100}\NormalTok{,}
+                      \DataTypeTok{d1 =} \DecValTok{5}\NormalTok{,}
+                      \DataTypeTok{pen =} \FloatTok{1e6}\NormalTok{,}
+                      \DataTypeTok{steptol =} \FloatTok{1e-6}\NormalTok{,}
+                      \DataTypeTok{n_flag =} \DecValTok{2}\NormalTok{,}
+                      \DataTypeTok{seed =} \DecValTok{2}\NormalTok{,}\DataTypeTok{trace =} \OtherTok{FALSE}\NormalTok{)}
+\NormalTok{\})}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## ----step < steptol---------stop the iteration------
+\end{verbatim}
+
+\begin{verbatim}
+##    user  system elapsed 
+##    0.31    0.00    0.31
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{result}\OperatorTok{$}\NormalTok{par}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## [1]  14.908531   7.652175  43.541638 159.543000
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{result}\OperatorTok{$}\NormalTok{value}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## [1] 6305.57
+\end{verbatim}
 
 \chapter{更新及维护计划}\label{updates}
 
